--- a/ts/package.json
+++ b/ts/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon src/index.ts --exitcrash",
+    "dev": "nodemon src/index.ts -L -e ts --exitcrash",
     "build": "tsc",
     "start": "node dist/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
